# ChatApp

./: CMakeLists.txt  README.md
ChatClientApp/: main.cpp
ChatServerApp/: ClientLogic.cpp  Logic.cpp  PipeLogic.cpp  SocketLogic.cpp  main.cpp
Common/: AutoSocket.cpp  AutoSocket.h  Default.h  Finally.h  Logger.cpp  Logger.h  Never.h  ServerSocket.cpp  ServerSocket.h  StringConvert.cpp  StringConvert.h  required.h
ServerStatusApp/: QueryPipe.cpp  main.cpp
